fix null